...
            android:textSize="@dimen/bmi_mainActivity_labelTextSize"/>
    <EditText
            android:layout_width="@dimen/bmi_mainActivity_inputWidth"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/num_weight" android:layout_marginTop="@dimen/bmi_mainActivity_inputMarginTop"
            app:layout_constraintTop_toBottomOf="@+id/tv_weight" android:layout_marginStart="@dimen/bmi_mainActivity_inputMarginStart"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="@dimen/bmi_mainActivity_inputMarginEnd"
            app:layout_constraintEnd_toEndOf="parent" android:hint="@string/your_weight"/>
    <TextView
            android:text="@string/height_cm"
            android:layout_width="@dimen/bmi_mainActivity_labelWidth"
...
            android:layout_marginStart="@dimen/bmi_mainActivity_labelMarginStart"/>
    <EditText
            android:layout_width="@dimen/bmi_mainActivity_inputWidth"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/num_height" android:layout_marginTop="@dimen/bmi_mainActivity_inputMarginTop"
            app:layout_constraintTop_toBottomOf="@+id/tv_height"
            android:layout_marginStart="@dimen/bmi_mainActivity_inputMarginStart"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="@dimen/bmi_mainActivity_inputMarginEndLand"
            app:layout_constraintEnd_toEndOf="parent" android:hint="@string/your_height"/>
    <TextView
            android:text="@string/init_bmi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_bmi_value"
            android:layout_marginBottom="@dimen/bmi_mainActivity_bmiDisplayMarginBottom"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/but_calculate" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/bmi_mainActivity_bmiDisplayMarginStart"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/bmi_mainActivity_bmiDisplayMarginEnd"
            android:textSize="@dimen/bmi_mainActivity_bmiDisplayTextSize" android:layout_marginTop="@dimen/bmi_mainActivity_bmiDisplayMarginTop"
            app:layout_constraintTop_toTopOf="@+id/guideline10"
            app:layout_constraintHorizontal_bias="0.498" app:layout_constraintVertical_bias="0.327"/>
...
